@@ -1,4 +1,4 @@
 DIST netbeans-6.5beta-200808111757-src.zip 272651333 RMD160 3746042139c8debb60fa704caa98f8a313111ff0 SHA1 4cdc0647fa4f7a56a3c45f9a38b221738b6ec2ea SHA256 5661174f11ef0548fabb39e6511dce5843fe84aa67bcb03e3255ad52095af4b4
-EBUILD netbeans-6.5_beta.ebuild 29535 RMD160 ef3a4b52517611228a68371bf2836829260f87e9 SHA1 91629819b60c2e43411e52ad1d69125eaaa27219 SHA256 d6abb4f7764d531d65150151105e9d106df0f4333d1bd5cc16634a7005345eb4
-MISC ChangeLog 25946 RMD160 d7aaf48f89276b0d71f386590f40fd6114005675 SHA1 14dec2d47c8a7414b108829dff553cf7fae69d10 SHA256 0756258d18adaac326fa9375bea52aa8d106d410be278bb2d63f8a0ad5fcec48
+EBUILD netbeans-6.5_beta.ebuild 30801 RMD160 f69fdb65022a5388ef32a5819b53b416cd30808a SHA1 bb764f9e37b4dacc1e17fac1443a36723a611d39 SHA256 b62631823587b7337ddf5aa50c406a4af84e9871564cc33d7e70b15897035d2d
+MISC ChangeLog 26068 RMD160 b93b5ac5d9d879b7b5055932841b1131e9db25f0 SHA1 893bd42a44b32d8f8a09870ba87286591d449dfd SHA256 a3db4a51dfbf88e2c4fa29076a89fe0ab86c6566ac8fa756f2352f6348388a0c
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
